--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,9 @@ a {
   padding-top: 120px;
   padding-bottom: 120px;
 }
+img{
+  display: block;
+}
 /*-------------------HEADER------------------- */
 .header {
   border-bottom: 1px solid #e7e9fc;
@@ -221,4 +224,47 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #f4f4fd;
+}
+/*---------------portfolio----------*/
+.portfolio{
+  background-color: #fff;
+}
+.cards{
+ border-bottom: 1px solid #e7e9fc;
+border-left: 1px solid #e7e9fc;
+border-right: 1px solid #e7e9fc;
+padding: 32px 16px;
+width: 360px;
+height: 120px;
+background: #fff;
+}
+.portfolio-name {
+  font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2e2f42;
+}
+.portfolio-list {
+  gap: 24px;
+  margin-bottom: 48px;
+  display: flex;
+}
+.portfolio-item {
+}
+.portfolio-img {
+}
+.portfolio-list-name {
+  font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2e2f42;
+}
+.portfolio-list-text {
+  font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
 }
