--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,8 @@ a {
   padding-right: 156px;
   margin-left: 24px;
   margin-right: 24px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 .section {
   padding-top: 120px;
@@ -49,6 +51,7 @@ img{
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  margin-right: 76px;
 }
 .logo-studio-nav {
   font-weight: 700;
@@ -61,6 +64,7 @@ img{
 .nav-list {
   display: flex;
   gap: 40px;
+  padding: 24px 0;
 }
 .nav-item {
 }
@@ -92,6 +96,7 @@ img{
   height: 600px;
   padding-top: 188px;
   padding-bottom: 188px;
+  max-width: 496px;
 }
 .hero-name {
   font-weight: 700;
@@ -113,6 +118,8 @@ img{
   letter-spacing: 0.04em;
   color: #fff;
   font-weight: 500;
+  display: block; 
+  min-width: 169px;
 }
 .button-hero:hover {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
@@ -124,7 +131,7 @@ img{
 }
 /*----------------feature section-------------*/
 .feature-section {
-  
+  padding: 120px 0 ;
 }
 .feature-list {
   display: flex;
