--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,7 @@ img{
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  max-width: 496px; 
 }
 .button-hero {
   border-radius: 4px;
@@ -138,7 +139,7 @@ img{
   gap: 24px;
 }
 .feature-item {
-  width: calc((1128-72)/4);
+  width: calc((100% - 72px) / 4);
 }
 .visually-hidden {
   position: absolute;
@@ -158,6 +159,7 @@ img{
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px; 
 }
 .feature-text {
   font-weight: 400;
@@ -169,11 +171,15 @@ img{
 /*---------------------our team-------------------*/
 .team-section{
   background: #f4f4fd;
+  padding: 120px 0 ;
+
 }
 .team-container{
 padding: 32px 16px;
+padding: 32px 0;
 }
 .team-name {
+  margin-bottom: 72px; 
 }
 .team-list {
   gap: 24px;
@@ -182,9 +188,9 @@ padding: 32px 16px;
 .team-item {
 border-radius: 0 0 4px 4px;
 padding: 0px 0px 32px 0px;
-width: calc((100% - 72px) / 4);
 box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 background: #fff;
+width: calc((100% - 72px) / 4);
 }
 .team-img {
 }
@@ -195,6 +201,7 @@ line-height: 1.2;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;
+margin-bottom: 8px;
 }
 .team-text {
   font-weight: 400;
@@ -204,37 +211,10 @@ letter-spacing: 0.02em;
 text-align: center;
 color: #434455;
 }
-/*-------------footer-------------*/
-.footer{
-  background: #2e2f42;
-}
-.logo-footer {
-font-weight: 700;
-font-size: 18px;
-line-height: 1.16667;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: #4d5ae5;
-margin-bottom: 16px;
-}
-.footer-studio {
-font-weight: 700;
-font-size: 18px;
-line-height: 1.16667;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: #f4f4fd;
-}
-.footer-text {
-  font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #f4f4fd;
-}
 /*---------------portfolio----------*/
 .portfolio{
   background-color: #fff;
+  padding-top: 120px; padding-bottom: 120px; 
 }
 .cards{
  border-bottom: 1px solid #e7e9fc;
@@ -251,11 +231,13 @@ font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
 color: #2e2f42;
+margin-bottom: 72px; 
 }
 .portfolio-list {
   gap: 24px;
-  margin-bottom: 48px;
   display: flex;
+  flex-wrap: wrap;
+  row-gap: 48px;
 }
 .portfolio-item {
 }
@@ -267,6 +249,7 @@ font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
 color: #2e2f42;
+margin-bottom: 8px;
 }
 .portfolio-list-text {
   font-weight: 400;
@@ -274,4 +257,34 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
+}
+/*-------------footer-------------*/
+.footer{
+  background: #2e2f42;
+  padding: 100px 0;
+}
+.logo-footer {
+font-weight: 700;
+font-size: 18px;
+line-height: 1.16667;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #4d5ae5;
+margin-bottom: 16px;
+display: inline-block;
+}
+.footer-studio {
+font-weight: 700;
+font-size: 18px;
+line-height: 1.16667;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #f4f4fd;
+}
+.footer-text {
+  font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #f4f4fd;
 }
