--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,6 @@ img{
 .address-list {
   display: flex;
   gap: 40px;
-  padding: 24px 0;
 }
 .address-item {
   font-weight: 400;
@@ -87,6 +86,7 @@ img{
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  padding: 24px 0;
 }
 .address-links {
 }
@@ -139,7 +139,7 @@ img{
   gap: 24px;
 }
 .feature-item {
-  width: calc((100% - 72px) / 4);
+  width: calc((100% - 72px) / 4); ;
 }
 .visually-hidden {
   position: absolute;
@@ -240,7 +240,7 @@ margin-bottom: 72px;
   row-gap: 48px;
 }
 .portfolio-item {
-  width: calc((100% - 72px) / 4); 
+  width: calc((100% - 48px) / 3); 
 }
 .portfolio-img {
 }
