--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,15 @@ body {
 }
 ul {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 a {
   text-decoration: none;
 }
-
+.address{
+  margin-left: auto;
+}
 .container {
   max-width: 1158px;
   padding-left: 156px;
@@ -29,10 +33,9 @@ img{
 /*-------------------HEADER------------------- */
 .header {
   border-bottom: 1px solid #e7e9fc;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  
   height: 72px;
-  background: #fff;
+  
 }
 .header-container {
   display: flex;
@@ -40,8 +43,7 @@ img{
 .navigation {
   display: flex;
   align-items: center;
-  flex-grow: 1;
-  justify-content: space-between;
+  
 }
 .logo-nav {
   font-family: "Raleway", sans-serif;
@@ -93,10 +95,10 @@ img{
 /*----------------hero section ----------------*/
 .hero-section {
   background: #2e2f42;
-  height: 600px;
   padding-top: 188px;
   padding-bottom: 188px;
-  max-width: 496px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .hero-name {
   font-weight: 700;
@@ -121,6 +123,7 @@ img{
   font-weight: 500;
   display: block; 
   min-width: 169px;
+  margin: 0 auto;
 }
 .button-hero:hover {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
@@ -221,8 +224,6 @@ color: #434455;
 border-left: 1px solid #e7e9fc;
 border-right: 1px solid #e7e9fc;
 padding: 32px 16px;
-width: 360px;
-height: 120px;
 background: #fff;
 }
 .portfolio-name {
