--- a/css/styles.css
+++ b/css/styles.css
@@ -33,12 +33,12 @@ img{
 /*-------------------HEADER------------------- */
 .header {
   border-bottom: 1px solid #e7e9fc;
-  
   height: 72px;
-  
+  display: flex;
 }
 .header-container {
   display: flex;
+  align-items: center;
 }
 .navigation {
   display: flex;
@@ -46,7 +46,7 @@ img{
   
 }
 .logo-nav {
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway';
   font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
@@ -54,8 +54,10 @@ img{
   text-transform: uppercase;
   color: #4d5ae5;
   margin-right: 76px;
+  display: inline-block;
 }
 .logo-studio-nav {
+  font-family: 'Raleway';
   font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
@@ -68,15 +70,25 @@ img{
   gap: 40px;
 }
 .nav-item {
+  font-weight: 500;
+  line-height: 1.3;
 }
 .nav-links {
-  font-weight: 500;
-  font-size: 16px;
   line-height: 1.5;
+  font-size: 16px;
+  font-weight: 500;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: #2E2F42;
+  text-decoration: none;
+  padding: 24px 0;
+}
+.nav-item .link:hover,
+.nav-item .link:focus {
+    color: #404bbf;
 }
 .address {
+  font-style: normal;
+    margin-left: auto;
 }
 .address-list {
   display: flex;
@@ -89,41 +101,54 @@ img{
   letter-spacing: 0.02em;
   color: #434455;
   padding: 24px 0;
+
 }
 .address-links {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+  padding: 24px 0;
+  text-decoration: none;
 }
 /*----------------hero section ----------------*/
 .hero-section {
-  background: #2e2f42;
+  background: #2E2F42;
+    padding: 188px 0;
+  /*background: #2e2f42;
   padding-top: 188px;
   padding-bottom: 188px;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto;*/
 }
-.hero-name {
-  font-weight: 700;
-  font-size: 56px;
-  line-height: 1.07143;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #fff;
-  max-width: 496px; 
+.hero-name {  
+    max-width: 496px;
+    margin: 0 auto;
+    margin-bottom: 48px;
+    font-weight: 700;
+font-size: 56px;
+line-height: 1.07143;
+letter-spacing: 0.02em;
+text-align: center;
+color: #fff;
 }
 .button-hero {
-  border-radius: 4px;
-  padding: 16px 32px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background: #4d5ae5;
-  cursor: pointer;
-  border: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  color: #fff;
-  font-weight: 500;
-  display: block; 
+  cursor: pointer;
+  display: block;
   min-width: 169px;
+  height: 56px;
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   margin: 0 auto;
+  color: #fff;
+  background: #4d5ae5;
+  border-radius: 4px;
 }
 .button-hero:hover {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
